--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,4 +1,4 @@
-@charset "UTF-O"
+@charset "UTF-8";
 
 * {
     margin: 0px;
@@ -7,27 +7,32 @@
 }
 
 html, body {
-    height: 100vh;
-    width: 100vh;
+    height: 100vh; /*100% da view height */
+    width: 100vw; /*100% da view width */
     background-color: black;
+}
+
+body {
+    background: url(../imagens/fundo-madeira.jpg) no-repeat top center; /*busquei a imagem na outras pasta ../ , tirei a repetição da imagem(no repeat) e posicionei o foco da imagem baseado no top center dela, onde ficava mais nitido. */
+    background-size:cover; /*tamanho cobre todo o fundo */
 }
 
 main {
     position: relative; /* Quando você define position: relative em um elemento, ele serve como o referencial para qualquer elemento filho com position: absolute. Ou seja, os filhos serão posicionados em relação ao contêiner com position: relative. */
     height: 100vh;
-    background-color: green;
+    
 }
 
-section#telefone {
+section#telefone { /*section com ID telefone */
     position: absolute; /*deixo ele fixo em relação a algum container ou ao html ou body caso não tenha container.*/
     top: 50%; /* movimentar o top */
     left: 50%; /* movimentar o  left. aqui esta com a ponta superior esquerda no centro */
     transform: translate(-50%, -50%); /* aqui eu deixo o centro do elemento no centro da tela, para ficar 100% centralizado.*/
     
     
-    height: 500px;
+    height: 627px;
     width: 311px;
-    background:blue url(../imagens/frame-iphone.png) no-repeat; /* ../ signifca volte uma pasta e abra, pois nos arquivos da pasta imagens esta dentro da pagina projeto social */
+    background: url(../imagens/frame-iphone.png) no-repeat; /* ../ signifca volte uma pasta e abra, pois nos arquivos da pasta imagens esta dentro da pagina projeto social */
     
     /* Por padrão, as imagens se repetem pra preencher o espaço, então coloco no repeat para deixar somente 1.*/
 }
